test/modules/shadowing/issue-19167-3-x.good
issue-19167-3-x.chpl:6: In module 'CUseA':
issue-19167-3-x.chpl:9: error: 'x' has multiple definitions
issue-19167-3-x.chpl:7: note: redefined through the 'use' statement here
issue-19167-3-x.chpl:3: note: leading to the definition here
